# mtg_manabase

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: 00_project_log.md  01_roadmap.md  02_architecture.md
notebooks/chapter_0_foundations/: 00_baseline_land_drops_play_draw.ipynb
notebooks/layer_1_foundations/: 00_baseline_land_drops_play_draw.ipynb  01_mulligan_parameterisation.ipynb
src/mtg_mana/: config.py
src/mtg_mana/layer_1_foundations/: deck_parameters.py  hypergeometric_baseline.py
src/mtg_mana_optimiser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_smoke.py
